# kappa-net

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment.yml  requirements.txt
models/: train.py
src/: main.cpp  polymer.cpp  polymer.hpp  vector.cpp  vector.hpp
tests/: CMakeLists.txt  plot_vector_samples.py  test_tangent_corr.cpp  test_vector_distribution.cpp
